test/fail_compilation/fail37.d
ulong[cast(uint)((cast(float)int.sizeof/ulong.sizeof)-int.max>>2)+int.max>>2]  
hexarray;

